# 26-3-desktop-window-control

./: CMakeLists.txt  README.md
include/: functions.h  screen.h  window.h
src/: CMakeLists.txt  main.cpp  screen.cpp  window.cpp
